--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -144,11 +144,12 @@ ctwas settings
 
 * [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- munro st only](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings.html)
 * [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- susie st added](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_susieST.html)
-* [Comparing ctwas running setting: parameters only -- susie + munro st](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_munro_susie_st.html)
-* [Comparing with apa model: parameters only -- apa model only st](https://sq-96.github.io/multigroup_ctwas_analysis/parameters_apa_li.html)
+
 
 QTL settings
 
+* [Comparing susie & munro st: parameters only](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_munro_susie_st.html)
+* [Comparing with susie st & apa model](https://sq-96.github.io/multigroup_ctwas_analysis/parameters_apa_li.html)
 * [RNA editing QTLs](https://sq-96.github.io/multigroup_ctwas_analysis/edqtl.html)
 
 postprocessing settings
