--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -155,9 +155,11 @@ QTL settings
 postprocessing settings
 
 * [Comparing ld-mismatch setting](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_ldmm.html)
+* [CS filtering or not](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_csindex.html)
+  
+  
+  
 
-  
-  
 ## LDL examples
 
 package v2.0
@@ -169,6 +171,12 @@ package v2.0
 * [Comparing different PIP combining functions](https://sq-96.github.io/multigroup_ctwas_analysis/compare_pip_func_LDL.html)
 * [New tissues comparing LD mismatch](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_newtissue_example.html)
 * [Downstream analysis, predictdb eQTL, sQTL, Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_silver_standard.html)
+
+
+
+# Summary
+
+[Exploring genetic architecture](combine_qtls.html)
 
 
 # Old simulation results
