--- a/analysis/simulation_one_tissue_enrichment.Rmd
+++ b/analysis/simulation_one_tissue_enrichment.Rmd
@@ -7,7 +7,7 @@ editor_options:
 ---
 
 ## One tissue simulation
-```{r echo=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(ctwas)
 library(tidyr)
 library(dplyr)
