--- a/analysis/comparing_differnt_settings_csindex.Rmd
+++ b/analysis/comparing_differnt_settings_csindex.Rmd
@@ -14,12 +14,13 @@ library(dplyr)
 library(scales)
 library(tidyr)
 library(ggplot2)
+library(eulerr)
 
 traits_silver <- c("T2D","LDL","BMI","RBC","IBD","SCZ","aFib")
 names(traits_silver) <- c("T2D-panukb","LDL-ukb-d-30780_irnt","BMI-panukb","RBC-panukb","IBD-ebi-a-GCST004131","SCZ-ieu-b-5102","aFib-ebi-a-GCST006414")
 
 traits <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131","BMI-panukb","RBC-panukb","SCZ-ieu-b-5102","aFib-ebi-a-GCST006414","T2D-panukb")
-
+db <- "GO_Biological_Process_2023"
 
 folder_results <- "/project/xinhe/xsun/multi_group_ctwas/15.susie_weights/snakemake_outputs/"
 
@@ -70,6 +71,7 @@ create_summary_plot_withTP <- function(df, columns_to_plot, x_var = "setting", x
     scale_color_brewer(palette = "Set1")
 }
 
+DT::datatable(matrix())
 
 ```
 
@@ -84,7 +86,7 @@ setting_names <- c()
 num_gene_pip08_all <- c()
 num_silver_pip08_all <- c()
 num_bystander_pip08_all <- c()
-
+go_num_fdr005 <- c()
 for (trait in traits) {
   for (cs in c("CS_filtered","CS_NOT_filtered")){
     
@@ -108,7 +110,15 @@ for (trait in traits) {
     
     num_silver_pip08_all <- c(num_silver_pip08_all,sum(combined_pip_sig$gene_name %in% known))
     num_bystander_pip08_all <- c(num_bystander_pip08_all,sum(combined_pip_sig$gene_name %in% bystander))
-
+    
+    file_go <- paste0(folder_results,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L, ".enrichr_",db,"_",cs,".RDS")
+    if(!file.exists(file_go)){
+      go_num_fdr005 <- c(go_num_fdr005,0)
+    }else{
+      go <- readRDS(paste0(folder_results,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L, ".enrichr_",db,"_",cs,".RDS"))
+      go_num_fdr005 <- c(go_num_fdr005,nrow(go))
+    }
+    
     
   }
 }
@@ -117,14 +127,97 @@ df <- data.frame(setting = setting_names,
                  num_gene_pip08 = num_gene_pip08_all,
                  num_silver_pip08 = num_silver_pip08_all,
                  num_bystander_pip08 = num_bystander_pip08_all,
-                 TP_rate = num_silver_pip08_all/(num_silver_pip08_all+num_bystander_pip08_all))
+                 TP_rate = num_silver_pip08_all/(num_silver_pip08_all+num_bystander_pip08_all),
+                 go_num_fdr005 = go_num_fdr005)
 
 create_summary_plot_withTP(df,x_order = setting_names, 
                     columns_to_plot = c("num_gene_pip08","num_silver_pip08","TP_rate"))
+
+create_summary_plot_withTP(df,x_order = setting_names, 
+                    columns_to_plot = c("go_num_fdr005"), title = "Number of GO terms at p.adjust < 0.05")
 
 
 DT::datatable(df,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;',''),options = list(pageLength = 10) )
 ```
 
 
+```{r results='asis', warning=F, message=FALSE, fig.height=4, fig.width=4}
 
+traits <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131")
+
+for (trait in traits) {
+  
+  file_go_filtered <- paste0(folder_results,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L, ".enrichr_",db,"_CS_filtered.RDS")
+  if(!file.exists(file_go_filtered)){
+    go_filtered <- NULL
+  }else{
+    go_filtered <- readRDS(file_go_filtered)
+  }
+  
+
+  
+  file_go_nofiltered <- paste0(folder_results,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L, ".enrichr_",db,"_CS_NOT_filtered.RDS")
+  if(!file.exists(file_go_nofiltered)){
+    go_nofiltered <- NULL
+  }else{
+    go_nofiltered <- readRDS(file_go_nofiltered)
+  }
+  
+  set1 <- unique(go_filtered$Term)
+  set2 <- unique(go_nofiltered$Term)
+  
+  venn_input <- list(
+    Filtered = set1,
+    NoFiltered = set2
+  )
+  
+  fit <- euler(venn_input)
+  
+  print(plot(fit,
+       fills = c("skyblue", "orange"),
+       labels = TRUE,
+       quantities = TRUE,
+       main = trait))
+  
+    
+}
+
+```
+
+
+```{r results='asis', warning=F, message=FALSE, fig.height=4, fig.width=4}
+
+traits <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131")
+
+for (trait in traits) {
+  
+  file_go_filtered <- paste0(folder_results,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L, ".enrichr_",db,"_CS_filtered.RDS")
+  if(!file.exists(file_go_filtered)){
+    go_filtered <- NULL
+  }else{
+    go_filtered <- readRDS(file_go_filtered)
+  }
+  
+
+  
+  file_go_nofiltered <- paste0(folder_results,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L, ".enrichr_",db,"_CS_NOT_filtered.RDS")
+  if(!file.exists(file_go_nofiltered)){
+    go_nofiltered <- NULL
+  }else{
+    go_nofiltered <- readRDS(file_go_nofiltered)
+  }
+
+  
+  cat("\n\n")
+  cat(knitr::knit_print(DT::datatable(go_filtered[!go_filtered$Term %in% go_nofiltered$Term,], caption = htmltools::tags$caption( style = 'font-size: 150%; caption-side: topleft; text-align = left; color:black;',paste0("Unique GO terms at p.adjust < 0.05 -- ",trait, "--CS_filtered")),options = list(pageLength = 5))))
+  cat("\n\n")
+  
+  cat("\n\n")
+  cat(knitr::knit_print(DT::datatable(go_nofiltered[!go_nofiltered$Term %in% go_filtered$Term,], caption = htmltools::tags$caption( style = 'font-size: 150%; caption-side: topleft; text-align = left; color:black;',paste0("Unique GO terms at p.adjust < 0.05 -- ",trait, "--CS_NOT_filtered")),options = list(pageLength = 5))))
+  cat("\n\n")
+  
+ 
+    
+}
+
+```
